<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioGroup
            android:id="@+id/filter_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/filter_lights"
                style="@style/MyRadioButton"
                android:layout_marginTop="0dp"
                android:text="@string/filter_lights" />

            <RadioButton
                android:id="@+id/filter_heaters"
                style="@style/MyRadioButton"
                android:text="@string/filter_heaters" />

            <RadioButton
                android:id="@+id/filter_fans"
                style="@style/MyRadioButton"
                android:text="@string/filter_fans" />

            <RadioButton
                android:id="@+id/filter_alarms"
                style="@style/MyRadioButton"
                android:text="@string/filter_alarms" />

            <RadioButton
                android:id="@+id/filter_bluetooth"
                style="@style/MyRadioButton"
                android:text="@string/filter_bluetooth" />

            <RadioButton
                android:id="@+id/filter_etc"
                style="@style/MyRadioButton"
                android:text="@string/filter_etc" />

        </RadioGroup>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>