<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MyCardView">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout_heater"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toEndOf="@+id/guideline_vertical_right"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_left"
            app:layout_constraintTop_toBottomOf="@+id/text_device_name">

            <com.triggertrap.seekarc.SeekArc
                android:id="@+id/seek_arc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                app:arcWidth="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:max="40"
                app:rotation="180"
                app:startAngle="80"
                app:sweepAngle="200"
                app:touchInside="true" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_layout_heater_value"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/circle_red"
                android:clickable="true"
                android:elevation="3dp"
                android:focusable="true"
                android:scaleX="0.6"
                android:scaleY="0.6"
                app:layout_constraintBottom_toBottomOf="@+id/seek_arc"
                app:layout_constraintEnd_toEndOf="@+id/seek_arc"
                app:layout_constraintStart_toStartOf="@+id/seek_arc"
                app:layout_constraintTop_toTopOf="@+id/seek_arc">

                <TextView
                    android:id="@+id/text_heater_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/celsius"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@id/text_heater_value"
                    app:layout_constraintTop_toTopOf="@id/text_heater_value" />

                <TextView
                    android:id="@+id/text_heater_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="25dp"
                    android:text="@string/_18"
                    android:textSize="45sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>